# ACSO7

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs  persistence.rs
core/: Cargo.toml
core/src/: app.rs  config.rs  data.rs  error.rs  input.rs  lib.rs  performance.rs  persistence.rs  store.rs  ui.rs  world.rs
core/src/data/: name_gen.rs  names.rs
core/src/persistence/: world.rs
core/src/types/: ship.rs
core/src/ui/: effects.rs  log.rs  popup.rs  screens.rs  state.rs  theme.rs  widgets.rs
core/src/ui/screens/: colonists.rs  debug.rs  load.rs  new_world.rs  pods.rs  power_router.rs  reactor.rs  resource.rs  ship.rs  title.rs
core/src/ui/widgets/: alerts.rs  chart.rs  chrome.rs  log_view.rs  padded_line.rs  panel.rs  popup.rs  readout.rs  resources.rs  select_list.rs  shell.rs  sidebar.rs  source_breakdown.rs  status_bar.rs
core/src/world/: colonist.rs  events.rs  ship.rs
core/src/world/ship/: alert.rs  pods.rs  power_router.rs  reactor.rs  resources.rs  starscooper.rs
core/src/world/ship/resources/: flow.rs  history.rs
