[workspace]
resolver = "3"
members = ["app", "core"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
acso7 = { path = "core" }
jiff = { version = "0.2.29", features = ["serde"] }
ratatui = { version = "0.30.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
