[package]
name = "acso7"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
brotli = "8.0.4"
fastrand = "2.4.1"
jiff = { workspace = true }
ratatui = { workspace = true }
rmp-serde = "1.3.1"
serde = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
tachyonfx = "0.25.0"
thiserror = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
jiff = { workspace = true, features = ["js"] }